force-app/main/default/objects/Pricebook2/fields/ERUM_Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_Inicio__c</fullName>
    <label>Fecha Inicio</label>
    <type>Date</type>
</CustomField>