force-app/main/default/objects/Pricebook2/fields/ERUM_Moneda__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Moneda__c</fullName>
    <label>Moneda</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>