force-app/main/default/objects/Pricebook2/fields/ERUM_PB_Id_External__c.field-meta.xml
<CustomField>
    <fullName>ERUM_PB_Id_External__c</fullName>
    <externalId>true</externalId>
    <label>PB Id External</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>