force-app/main/default/objects/Pricebook2/fields/ERUM_Tarifa__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Tarifa__c</fullName>
    <displayFormat>TA-{00}</displayFormat>
    <label>Tarifa</label>
    <type>AutoNumber</type>
</CustomField>