force-app/main/default/objects/Pricebook2/fields/Name_IdExternal__c.field-meta.xml
<CustomField>
    <fullName>Name_IdExternal__c</fullName>
    <formula>Name &amp; &quot; (&quot; &amp; ERUM_PB_Id_External__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name_IdExternal</label>
    <type>Text</type>
</CustomField>