force-app/main/default/objects/Pricebook2/recordTypes/PriceBookRetail.recordType-meta.xml
<RecordType>
    <fullName>PriceBookRetail</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar listas de precios pertenecientes a la empresa de retail</description>
    <label>Retail</label>
</RecordType>