force-app/main/default/objects/Pricebook2/recordTypes/PriceBookSeguridadVial.recordType-meta.xml
<RecordType>
    <fullName>PriceBookSeguridadVial</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar listas de precios pertenecientes a la empresa de seguridad vial</description>
    <label>Seguridad Vial</label>
</RecordType>